tests/parse_only/errors/syn_lex/e3.src
.IPPcode21

LABEL 85adv
